@@ -419,7 +419,1236 @@ System.out.println("40=i5+i6   " + (40 == i5 + i6)); // true
 * [Guide哥的笔记](https://github.com/Snailclimb/JavaGuide/blob/master/docs/java/jvm/Java%E5%86%85%E5%AD%98%E5%8C%BA%E5%9F%9F.md)
 * [几张图轻松理解String.intern()](https://blog.csdn.net/tyyking/article/details/82496901)
 
+# 垃圾收集器与内存分配策略
+
+## 本章常见面试题
+
+- 如何判断对象是否死亡（两种方法）。
+- 简单的介绍一下强引用、软引用、弱引用、虚引用（虚引用与软引用和弱引用的区别、使用软引用能带来的好处）。
+- 如何判断一个常量是废弃常量
+- 如何判断一个类是无用的类
+- 垃圾收集有哪些算法，各自的特点？
+- HotSpot 为什么要分为新生代和老年代？
+- 常见的垃圾回收器有哪些？
+- 介绍一下 CMS,G1 收集器。
+- Minor Gc 和 Full GC 有什么不同呢？
+
+## 导论
+
+![](http://wardseptember.club/Fmeb6mftyN2qRY81Dr22IDcYimRf)
+
+当需要排查各种内存溢出问题、当垃圾收集成为系统达到更高并发的瓶颈时，我们就需要对这些“自动化”的技术实施必要的监控和调节。
+
+## 概述
+
+Java内存区域中程序计数器、虚拟机栈、本地方法栈3个区域随着线程而生，随着线程而灭。每一个栈帧中分配多少内存基本上是在类结构确定下来就已知的，这几个区域的内存分配和回收都具备确定性，不需要过多考虑回收的问题，当方法结束或者线程结束时，内存自然就跟着回收了。
+
+Java堆和方法区这两个内存区域则有很显著的不确定性，一个接口的多个实现类需要的内存可能会不一样，一个方法所执行的不同条件分支所需要的内存也可能不一样，只有处于运行期间，我们才能知道程序究竟会创建哪些对象，创建多少个对象，这部分内存分配和回收是动态的。垃圾收集器正是关注这部分内存。
+
+## JVM内存分配和回收基础
+
+Java 的自动内存管理主要是针对对象内存的回收和对象内存的分配。同时，Java 自动内存管理最核心的功能是 **堆** 内存中对象的分配与回收。
+
+Java 堆是垃圾收集器管理的主要区域，因此也被称作**GC 堆（Garbage Collected Heap）**.从垃圾回收的角度，由于现在收集器基本都采用分代垃圾收集算法，所以 Java 堆还可以细分为：新生代和老年代：再细致一点有：Eden 空间、From Survivor、To Survivor 空间等。**进一步划分的目的是更好地回收内存，或者更快地分配内存。**
+
+一些术语：
+
+* 部分收集（Partial GC）：指目标不是完整收集整个Java堆的垃圾，而且对部分区域收集。可细分为：
+  * 新生代收集（Minor GC/Young GC）
+  * 老年代收集（Major GC/Old GC）
+  * 混合收集（Mixed GC）：收集整个新生代以及部分老年代
+* 整堆收集（Full GC）：收集整个Java堆和方法区的垃圾
+
+**堆空间的基本结构：**
+
+![](http://wardseptember.club/FjaEIQYLzU19RKIG_MKpbJINrtTB)
+
+上图所示的 eden 区、s0("From") 区、s1("To") 区都属于新生代，tentired 区属于老年代。大部分情况，对象都会首先在 Eden 区域分配，在一次新生代垃圾回收后，如果对象还存活，则会进入 s1("To")，并且对象的年龄还会加 1(Eden 区->Survivor 区后对象的初始年龄变为 1)，当它的年龄增加到一定程度（默认为 15 岁），就会被晋升到老年代中。对象晋升到老年代的年龄阈值，可以通过参数 `-XX:MaxTenuringThreshold` 来设置。经过这次GC后，Eden区和"From"区已经被清空。这个时候，"From"和"To"会交换他们的角色，也就是新的"To"就是上次GC前的“From”，新的"From"就是上次GC前的"To"。不管怎样，都会保证名为To的Survivor区域是空的。Minor GC会一直重复这样的过程，直到“To”区被填满，"To"区被填满之后，会将所有对象移动到老年代中。
+
+### 对象优先在 eden 区分配
+
+目前主流的垃圾收集器都会采用分代回收算法，因此需要将堆内存分为新生代和老年代，这样我们就可以根据各个年代的特点选择合适的垃圾收集算法。
+
+大多数情况下，对象在新生代中 eden 区分配。当 eden 区没有足够空间进行分配时，虚拟机将发起一次 Minor GC，如果当Minor GC后eden区依然没有足够的空间进行分配，只好通过**分配担保机制** 把新生代的对象提前转移到老年代中去；如果执行分配担保机制后eden区依然存不下该对象，则再老年代分配；如果能存在，则继续在eden区分配。
+
+**Minor GC 和 Full GC 有什么不同呢？**
+
+- **新生代 GC（Minor GC）**:指发生新生代的的垃圾收集动作，Minor GC 非常频繁，回收速度一般也比较快。
+- **老年代 GC（Major GC）**:指发生在老年代的 GC，出现了 Major GC 经常会伴随至少一次的 Minor GC（并非绝对），Major GC 的速度一般会比 Minor GC 的慢 10 倍以上。
+
+### 大对象直接进入老年代
+
+大对象就是需要大量连续内存空间的对象（比如：字符串、数组）。
+
+**为什么要这样呢？**
+
+为了避免为大对象分配内存时由于分配担保机制带来的复制而降低效率。
+
+### 长期存活的对象将进入老年代
+
+既然虚拟机采用了分代收集的思想来管理内存，那么内存回收时就必须能识别哪些对象应放在新生代，哪些对象应放在老年代中。为了做到这一点，虚拟机给每个对象一个对象年龄（Age）计数器。
+
+如果对象在 Eden 出生并经过第一次 Minor GC 后仍然能够存活，并且能被 Survivor 容纳的话，将被移动到 Survivor 空间中，并将对象年龄设为 1.对象在 Survivor 中每熬过一次 MinorGC,年龄就增加 1 岁，当它的年龄增加到一定程度（默认为 15 岁），就会被晋升到老年代中。对象晋升到老年代的年龄阈值，可以通过参数 `-XX:MaxTenuringThreshold` 来设置。
+
+### 动态对象年龄判定
+
+虚拟机并不是永远要求对象的年龄必须达到 MaxTenuringThreshold 才能晋升老年代，如果在 Survivor 中相同年龄所有对象大小的总和大于 Survivor 空间的一半，则年龄大于或等于该年龄的对象可以直接进入老年代，无需等到 MaxTenuringThreshold 中要求的年龄。
+
+### 空间分配担保
+
+在发生 Minor GC 之前，虚拟机先检查老年代最大可用的连续空间是否大于新生代所有对象总空间，如果条件成立的话，那么 Minor GC 可以确认是安全的。
+
+如果不成立的话虚拟机会查看 HandlePromotionFailure 的值是否允许担保失败，如果允许那么就会继续检查老年代最大可用的连续空间是否大于历次晋升到老年代对象的平均大小，如果大于，将尝试着进行一次 Minor GC；如果小于，或者 HandlePromotionFailure 的值不允许冒险，那么就要进行一次 Full GC。
+
+### Full GC 的触发条件
+
+对于 Minor GC，其触发条件非常简单，当 Eden 空间满时，就将触发一次 Minor GC。而 Full GC 则相对复杂，有以下条件：
+
+#### 1. 调用 System.gc()
+
+只是建议虚拟机执行 Full GC，但是虚拟机不一定真正去执行。不建议使用这种方式，而是让虚拟机管理内存。
+
+#### 2. 老年代空间不足
+
+老年代空间不足的常见场景为前文所讲的大对象直接进入老年代、长期存活的对象进入老年代等。
+
+为了避免以上原因引起的 Full GC，应当尽量不要创建过大的对象以及数组。除此之外，可以通过 -Xmn 虚拟机参数调大新生代的大小，让对象尽量在新生代被回收掉，不进入老年代。还可以通过 -XX:MaxTenuringThreshold 调大对象进入老年代的年龄，让对象在新生代多存活一段时间。
+
+#### 3. 空间分配担保失败
+
+使用复制算法的 Minor GC 需要老年代的内存空间作担保，如果担保失败会执行一次 Full GC。具体内容请参考上面的内容。
+
+#### 4. JDK 1.7 及以前的永久代空间不足
+
+在 JDK 1.7 及以前，HotSpot 虚拟机中的方法区是用永久代实现的，永久代中存放的为一些 Class 的信息、常量、静态变量等数据。
+
+当系统中要加载的类、反射的类和调用的方法较多时，永久代可能会被占满，在未配置为采用 CMS GC 的情况下也会执行 Full GC。如果经过 Full GC 仍然回收不了，那么虚拟机会抛出 java.lang.OutOfMemoryError。
+
+为避免以上原因引起的 Full GC，可采用的方法为增大永久代空间或转为使用 CMS GC。
+
+#### 5. Concurrent Mode Failure
+
+执行 CMS GC 的过程中同时有对象要放入老年代，而此时老年代空间不足（可能是 GC 过程中浮动垃圾过多导致暂时性的空间不足），便会报 Concurrent Mode Failure 错误，并触发 Full GC。
+
+## 对象已死？
+
+堆中几乎放着所有的对象实例，对堆垃圾回收前的第一步就是要判断那些对象已经死亡（即不能再被任何途径使用的对象）。
+
+![](http://wardseptember.club/FpU3CdUgoDPlONFE8oxy3POz_WCX)
+
+下面介绍判断一个对象是否死亡的两种方法。
+
+### 引用计数法
+
+给对象中添加一个引用计数器，每当有一个地方引用它，计数器就加 1；当引用失效，计数器就减 1；任何时候计数器为 0 的对象就是不可能再被使用的。
+
+**这个方法实现简单，效率高，但是目前主流的虚拟机中并没有选择这个算法来管理内存，其最主要的原因是它很难解决对象之间相互循环引用的问题。** 所谓对象之间的相互引用问题，如下面代码所示：除了对象 objA 和 objB 相互引用着对方之外，这两个对象之间再无任何引用。但是他们因为互相引用对方，导致它们的引用计数器都不为 0，于是引用计数算法无法通知 GC 回收器回收他们。
+
+````java
+public class ReferenceCountingGc {
+    Object instance = null;
+	public static void main(String[] args) {
+		ReferenceCountingGc objA = new ReferenceCountingGc();
+		ReferenceCountingGc objB = new ReferenceCountingGc();
+		objA.instance = objB;
+		objB.instance = objA;
+		objA = null;
+		objB = null;
+
+	}
+}
+````
+
+### 可达性分析算法
+
+这个算法的基本思想就是通过一系列的称为 **“GC Roots”** 的对象作为起点，从这些节点开始向下搜索，节点所走过的路径称为引用链，当一个对象到 GC Roots 没有任何引用链相连的话，则证明此对象是不可用的。
+
+![](http://wardseptember.club/FhecqywgkomeiqDXJeJNxZOTRtWE)
+
+在Java技术体系中，固定可作为GC Roots的对象包括以下几种：
+
+* 在虚拟机栈中引用的对象，比如各个线程被调用的方法堆栈中使用到的参数、局部变量、临时变量等。
+* 在方法区中类静态属性引用的对象，比如Java类的引用类型静态变量。
+* 在方法区中常量引用的对象，比如字符串常量池里的引用。
+* 在本地方法栈中JNI（即通常所说的Native方法）引用的对象。
+* Java虚拟机内部的引用，如基本类型对应的Class对象，一些常驻的异常对象（比如NullPointException）等，还有系统类加载器。
+* 所有被同步锁（synchronized关键字）所持有的对象。
+
+### 再谈引用
+
+无论是通过引用计数法判断对象引用数量，还是通过可达性分析法判断对象的引用链是否可达，判定对象的存活都与“引用”有关。
+
+JDK1.2 之前，Java 中引用的定义很传统：如果 reference 类型的数据存储的数值代表的是另一块内存的起始地址，就称这块内存代表一个引用。
+
+JDK1.2 以后，Java 对引用的概念进行了扩充，将引用分为强引用、软引用、弱引用、虚引用四种（引用强度逐渐减弱）。
+
+#### 强引用
+
+以前我们使用的大部分引用实际上都是强引用，这是使用最普遍的引用。如果一个对象具有强引用，那就类似于**必不可少的生活用品**，垃圾回收器绝不会回收它。当内存空间不足，Java 虚拟机宁愿抛出 OutOfMemoryError 错误，使程序异常终止，也不会靠随意回收具有强引用的对象来解决内存不足问题。
+
+#### 软引用
+
+如果一个对象只具有软引用，那就类似于**可有可无的生活用品**。如果内存空间足够，垃圾回收器就不会回收它，如果内存空间不足了，就会回收这些对象的内存。只要垃圾回收器没有回收它，该对象就可以被程序使用。软引用可用来实现内存敏感的高速缓存。
+
+软引用可以和一个引用队列（ReferenceQueue）联合使用，如果软引用所引用的对象被垃圾回收，JAVA 虚拟机就会把这个软引用加入到与之关联的引用队列中。
+
+#### 弱引用
+
+如果一个对象只具有弱引用，那就类似于**可有可无的生活用品**。弱引用与软引用的区别在于：只具有弱引用的对象拥有更短暂的生命周期。在垃圾回收器线程扫描它所管辖的内存区域的过程中，一旦发现了只具有弱引用的对象，不管当前内存空间足够与否，都会回收它的内存。不过，由于垃圾回收器是一个优先级很低的线程， 因此不一定会很快发现那些只具有弱引用的对象。
+
+弱引用可以和一个引用队列（ReferenceQueue）联合使用，如果弱引用所引用的对象被垃圾回收，Java 虚拟机就会把这个弱引用加入到与之关联的引用队列中。
+
+##### 应用
+
+假如一个应用需要读取大量的本地图片，如果每次读取图片都从硬盘读取则会严重影响性能，如果一次性全部加装到内存中又可能造成内存溢出。这时可以用软引用或者弱引用解决这个问题。
+
+```java
+Map<String, SoftReference<Bitmap>> imageCache = new HashMap<String, SoftReference<Bitmap>>();
+```
+
+##### WeakHashMap
+
+```java
+import java.util.WeakHashMap;
+
+/**
+ * @author wardseptember
+ * @create 2020-09-23 13:39
+ */
+public class WeakHashMapDemo {
+    public static void main(String[] args) {
+        myWeakHashMap();
+    }
+
+    private static void myWeakHashMap() {
+        WeakHashMap<Integer, String> map = new WeakHashMap<>();
+
+        Integer key = new Integer(1);
+        String value = "https://wardseptember.gitee.io";
+
+        map.put(key, value);
+        System.out.println(map);
+
+        key = null;
+        // 手动触发一次GC
+        System.gc();
+        System.out.println(map);
+    }
+}
+```
+
+##### ReferenceQueue
+
+```java
+import java.lang.ref.ReferenceQueue;
+import java.lang.ref.WeakReference;
+
+/**
+ * @author wardseptember
+ * @create 2020-09-23 13:50
+ */
+public class WeakReferenceDemo {
+    public static void main(String[] args) {
+        Object o1 = new Object();
+
+        ReferenceQueue<Object> referenceQueue = new ReferenceQueue<>();
+        WeakReference<Object> weakReference = new WeakReference<>(o1, referenceQueue);
+        System.out.println(o1);
+        System.out.println(weakReference.get());
+        System.out.println(referenceQueue.poll());
+
+        System.out.println("==============");
+        o1 = null;
+        System.gc();
+        try {
+            Thread.sleep(500);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        // o1被回收前，会给referenceQueue发送一个通知
+        System.out.println(o1);
+        System.out.println(weakReference.get());
+        System.out.println(referenceQueue.poll());
+    }
+}
+```
+
+#### 虚引用
+
+"虚引用"顾名思义，就是形同虚设，与其他几种引用都不同，虚引用并不会决定对象的生命周期。如果一个对象仅持有虚引用，那么它就和没有任何引用一样，在任何时候都可能被垃圾回收。
+
+**虚引用主要用来跟踪对象被垃圾回收的活动**。
+
+为一个对象设置虚引用关联的唯一目的只是为了能在这个对象被收集器回收时收到一个系统通知。
+
+**虚引用与软引用和弱引用的一个区别在于：** 虚引用必须和引用队列（ReferenceQueue）联合使用。当垃圾回收器准备回收一个对象时，如果发现它还有虚引用，就会在回收对象的内存之前，把这个虚引用加入到与之关联的引用队列中。程序可以通过判断引用队列中是否已经加入了虚引用，来了解被引用的对象是否将要被垃圾回收。程序如果发现某个虚引用已经被加入到引用队列，那么就可以在所引用的对象的内存被回收之前采取必要的行动。
+
+PhantomReference的get方法总是返回null。
+
+特别注意，在程序设计中一般很少使用弱引用与虚引用，使用软引用的情况较多，这是因为**软引用可以加速 JVM 对垃圾内存的回收速度，可以维护系统的运行安全，防止内存溢出（OutOfMemory）等问题的产生**。
+
+##### PhantomReference
+
+```java
+import java.lang.ref.PhantomReference;
+import java.lang.ref.ReferenceQueue;
+import java.lang.ref.WeakReference;
+
+/**
+ * @author wardseptember
+ * @create 2020-09-23 13:50
+ */
+public class PhantomReferenceDemo {
+    public static void main(String[] args) {
+        Object o1 = new Object();
+
+        ReferenceQueue<Object> referenceQueue = new ReferenceQueue<>();
+        PhantomReference<Object> phantomReference = new PhantomReference<>(o1, referenceQueue);
+        System.out.println(o1);
+        System.out.println(phantomReference.get());
+        System.out.println(referenceQueue.poll());
+
+        System.out.println("==============");
+        o1 = null;
+        System.gc();
+        try {
+            Thread.sleep(500);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        // o1被回收前，会给referenceQueue发送一个通知
+        System.out.println(o1);
+        System.out.println(phantomReference.get());
+        System.out.println(referenceQueue.poll());
+    }
+}
+```
+
+### 生存还是死亡？
+
+即使在可达性分析法中不可达的对象，也并非是“非死不可”的，这时候它们暂时处于“缓刑阶段”，要真正宣告一个对象死亡，至少要经历两次标记过程；如果对象在进行可达性分析后被判断为不可达对象，那它将会被第一次标记，随后进行一次筛选，筛选的条件是此对象是否有必要执行`finalize()`方法。对象没有覆盖 finalize 方法，或 finalize 方法已经被虚拟机调用过时，虚拟机将这两种情况视为没有必要执行。
+
+被判定为需要执行`finalize()`方法的对象将会被放在一个队列中进行第二次标记，除非这个对象与引用链上的任何一个对象建立关联，否则就会被真的回收。`finalize()`方法是对象逃脱回收的最后一次机会。自救只能进行一次，如果回收的对象之前调用了 finalize() 方法自救，后面回收时不会再调用该方法。
+
+`finalize()`类似 C++ 的析构函数，用于关闭外部资源。但是 try-finally 等方式可以做得更好，并且该方法运行代价很高，不确定性大，无法保证各个对象的调用顺序，因此最好不要使用。
+
+### 回收方法区
+
+方法区的垃圾收集主要回收废弃的常量和不再使用的类型。
+
+#### 如何判断一个常量是废弃常量
+
+假如在常量池中存在字符串 "java"，如果当前没有任何 String 对象引用该字符串常量的话，就说明常量 "java" 就是废弃常量，如果这时发生内存回收的话而且有必要的话，”java" 就会被系统清理出常量池。
+
+#### 如何判断一个类是无用的类
+
+- 该类所有的实例都已经被回收，也就是 Java 堆中不存在该类及其任何派生子类的实例。
+- 加载该类的 ClassLoader 已经被回收。
+- 该类对应的 java.lang.Class 对象没有在任何地方被引用，无法在任何地方通过反射访问该类的方法。
+
+虚拟机可以对满足上述 3 个条件的无用类进行回收，这里说的仅仅是“可以”，而并不是和对象一样不使用了就会必然被回收。
+
+## OOM
+
+### Java.lang.StackOverflowError
+
+栈溢出，栈里面存储的是方法的调用，上面有讲。
+
+### Java.lang.OutOfMemoryError: Java heap space
+
+对象太多，堆溢出。
+
+![](https://gitee.com/wardseptember/images/raw/master/imgs/20200923141237.png)
+
+### Java.lang.OutOfMemoryError: GC overhead limit exceeded
+
+GC回收时间过长时会抛出OutOfMemroyError。过长的定义是，超过98%的时间用来做GC并且回收了不到2%的堆内存，连续多次GC都只回收了不到2%的内存的极端情况下才会抛出。CPU使用率一直是100%，而GC却没有任何成果。
+
+### Java.lang.OutOfMemoryError: Direct buffer memory
+
+ByteBuffer.allocateDirect(capability)分配操作系统本地内存，不属于GC管辖范围。分配太多，可能导致 Direct buffer memory
+
+### Java.lang.OutOfMemoryError: unable to create new native thread
+
+创建太多线程。
+
+#### 导致原因
+
+* 一个应用进程创建了多个线程，超过系统承载极限。
+* 服务器不允许你的应该程序创建这么多线程，linux系统默认允许单个进程可以创建的线程数是1024个。
+
+#### 解决办法
+
+* 想办法降低你应用程序创建线程的数量，分析应用是否真的需要创建这么多线程，如果不是，改代码将线程数降到最低。
+* 对于有的应用，确实需要创建很多线程，远超过linux系统的默认1024个线程的限制，可以通过修改linux服务器配置，扩大linux默认限制
+
+### Java.lang.OutOfMemoryError: Metaspace
+
+Metaspace是方法区在HotSpot中的实现，使用的是本地内存，主要存储虚拟机加载的类信息、常量池、静态变量、即时编译后的代码等。
+
+如果类太多，就报Java.lang.OutOfMemoryError: Metaspace.
+
+## 垃圾收集算法
+
+从如何判定对象消亡的角度出发，垃圾收集算法可以划分为“引用计数式垃圾收集”和“追踪式垃圾收集“。本文全部属于追踪式垃圾收集范畴。
+
+### 分代收集理论
+
+当前虚拟机的垃圾收集都采用分代收集算法，这种算法没有什么新的思想，只是根据对象存活周期的不同将内存分为几块。一般将 java 堆分为新生代和老年代，这样我们就可以根据各个年代的特点选择合适的垃圾收集算法。
+
+**比如在新生代中，每次收集都会有大量对象死去，所以可以选择复制算法，只需要付出少量对象的复制成本就可以完成每次垃圾收集。而老年代的对象存活几率是比较高的，而且没有额外的空间对它进行分配担保，所以我们必须选择“标记-清除”或“标记-整理”算法进行垃圾收集。**
+
+### 标记-清除算法
+
+该算法分为“标记”和“清除”阶段：首先标记出所有需要回收的对象，在标记完成后统一回收所有被标记的对象。它是最基础的收集算法，后续的算法都是对其不足进行改进得到。这种垃圾收集算法会带来两个明显的问题：
+
+* 执行效率不稳定。如果Java堆中包含大量需要被回收的对象，这是必须进行大量的标记和清除动作，导致回收效率降低。
+* 内存空间碎片化。标记、清除之后会产生大量不连续的内存碎片，空间碎片太多可能会导致当以后程序运行过程中需要分配较大对象时无法找到足够的连续内存而不得不提前触发另一次垃圾收集动作。
+
+![](http://wardseptember.club/FgqA2lgvgK9eHQQcDVeWaeyke-BD)
+
+### 标记-复制算法
+
+为了解决标记-清除算法中的效率问题，“复制”收集算法出现了。它可以将内存分为大小相同的两块，每次使用其中的一块。当这一块的内存使用完后，就将还存活的对象复制到另一块去，然后再把使用的空间一次清理掉。这样就使每次的内存回收都是对内存区间的一半进行回收。
+
+![](http://wardseptember.club/FrewWCsCtIgaIZQaCcnlyQsxJuWd)
+
+缺点：
+
+* 可用内存缩小为原来的一半，空间浪费明显。
+* 当对象存活率高时，复制效率低。
+
+### 标记-整理算法
+
+根据老年代的特点提出的一种标记算法，标记过程仍然与“标记-清除”算法一样，但后续步骤不是直接对可回收对象回收，而是让所有存活的对象向一端移动，然后直接清理掉端边界以外的内存。
+
+![](http://wardseptember.club/FgsFWO2GkAGoSR_gsiECEez0Rtou)
+
+缺点：
+
+* 如果移动存活对象，尤其是在老年代这种每次回收都有大量对象存活区域，这种移动操作必须全程暂停用户应用程序才能进行。
+
+## HotSpot的算法细节实现
+
+此节暂时省略。
+
+## 经典垃圾收集器
+
+![](http://wardseptember.club/Fmz83KfQnA5DUuyPiPBT50WPRXyA)
+
+以上是 HotSpot 虚拟机中的 7 个垃圾收集器，连线表示垃圾收集器可以配合使用；图中收集器所处的区域，则表示它是属于新生代收集器或者是老年代收集器。
+
+- 单线程与多线程：单线程指的是垃圾收集器只使用一个线程，而多线程使用多个线程；
+- 串行与并行：串行指的是垃圾收集器与用户程序交替执行，这意味着在执行垃圾收集的时候需要停顿用户程序；并行指的是垃圾收集器和用户程序同时执行。除了 CMS 和 G1 之外，其它垃圾收集器都是以串行的方式执行。
+
+### Serial 收集器
+
+![](http://wardseptember.club/FkCjVVenZXClApirFOkIDPE_e0j5)
+
+Serial（串行）收集器收集器是最基本、历史最悠久的垃圾收集器了。大家看名字就知道这个收集器是一个单线程收集器了。它的 **“单线程”** 的意义不仅仅意味着它只会使用一条垃圾收集线程去完成垃圾收集工作，更重要的是它在进行垃圾收集工作的时候必须暂停其他所有的工作线程（ **"Stop The World"** ），直到它收集结束。
+
+**新生代采用复制算法，老年代采用标记-整理算法。**
+
+它的优点是简单高效，在单个 CPU 环境下，由于没有线程交互的开销，因此拥有最高的单线程收集效率。
+
+它是 Client 场景下的默认新生代收集器，因为在该场景下内存一般来说不会很大。它收集一两百兆垃圾的停顿时间可以控制在一百多毫秒以内，只要不是太频繁，这点停顿时间是可以接受的。
+
+### ParNew 收集器
+
+![](http://wardseptember.club/FpIifXxYw5uZGrS-9fiwLCF_dvRL)
+
+它是 Serial 收集器的多线程版本。
+
+它是 Server 场景下默认的新生代收集器，除了性能原因外，主要是因为除了 Serial 收集器，只有它能与 CMS 收集器配合使用。
+
+自JDK 9开始，ParNew加CMS收集器的组合就不再是官方推荐的服务端模式下的收集器解决方案，官方希望G1（Garbage First）能完全取代它。
+
+**并行和并发概念补充：**
+
+- **并行（Parallel）** ：并行描述的是多条垃圾收集器线程之间的关系，指同一时间多条垃圾收集线程在协同工作，但此时用户线程仍然处于等待状态。
+- **并发（Concurrent）**：指用户线程与垃圾收集线程同时执行（但不一定是并行，可能会交替执行），用户程序在继续运行，而垃圾收集器运行在另一个 CPU 上。
+
+### Parallel Scavenge 收集器
+
+Parallel Scavenge 收集器也是使用复制算法的多线程收集器，它看上去几乎和ParNew都一样。 **那么它有什么特别之处呢？**
+
+```
+-XX:+UseParallelGC 
+
+    使用 Parallel 收集器+ 老年代串行
+
+-XX:+UseParallelOldGC
+
+    使用 Parallel 收集器+ 老年代并行
+```
+
+**CMS 等垃圾收集器的目标**是尽可能缩短垃圾收集时用户线程的停顿时间，而它的目标是达到一个可控制的吞吐量，因此它被称为“吞吐量优先”收集器。这里的吞吐量指 CPU 用于运行用户程序的时间占总时间的比值。
+
+停顿时间越短就越适合需要与用户交互的程序，良好的响应速度能提升用户体验。而高吞吐量则可以高效率地利用 CPU 时间，尽快完成程序的运算任务，适合在后台运算而不需要太多交互的任务。
+
+缩短停顿时间是以牺牲吞吐量和新生代空间来换取的：新生代空间变小，垃圾回收变得频繁，导致吞吐量下降。
+
+可以通过一个开关参数打开 GC 自适应的调节策略（GC Ergonomics），就不需要手工指定新生代的大小（-Xmn）、Eden 和 Survivor 区的比例、晋升老年代对象年龄等细节参数了。虚拟机会根据当前系统的运行情况收集性能监控信息，动态调整这些参数以提供最合适的停顿时间或者最大的吞吐量。
+
+Parallel Scavenge 收集器提供了很多参数供用户找到最合适的停顿时间或最大吞吐量，如果对于收集器运作不太了解的话，手工优化存在困难的话可以选择把内存管理优化交给虚拟机去完成也是一个不错的选择。
+
+### Serial Old 收集器
+
+Serial Old收集器是**Serial 收集器的老年代版本**，它同样是一个单线程收集器。它主要有两大用途：一种用途是在 JDK1.5 以及以前的版本中与 Parallel Scavenge 收集器搭配使用，另一种用途是作为 CMS 收集器发生失败时的后备方案。
+
+### Parallel Old收集器
+
+**Parallel Scavenge 收集器的老年代版本**。使用多线程和“标记-整理”算法。在注重吞吐量以及 CPU 资源的场合，都可以优先考虑 Parallel Scavenge 收集器和 Parallel Old 收集器。
+
+### CMS 收集器
+
+**CMS（Concurrent Mark Sweep）收集器是一种以获取最短回收停顿时间为目标的收集器。它非常符合在注重用户体验的应用上使用。**
+
+**CMS（Concurrent Mark Sweep）收集器是 HotSpot 虚拟机第一款真正意义上的并发收集器，它第一次实现了让垃圾收集线程与用户线程（基本上）同时工作。**
+
+从名字中的**Mark Sweep**这两个词可以看出，CMS 收集器是一种 **“标记-清除”算法**实现的，它的运作过程相比于前面几种垃圾收集器来说更加复杂一些。整个过程分为四个步骤：
+
+- **初始标记：** 暂停所有的其他线程，并记录下直接与 root 相连的对象，速度很快 ；
+- **并发标记：** 进行 GC Roots Tracing 的过程，它在整个回收过程中耗时最长，不需要停顿。
+- **重新标记：** 重新标记阶段就是为了修正并发标记期间因为用户程序继续运行而导致标记产生变动的那一部分对象的标记记录，这个阶段的停顿时间一般会比初始标记阶段的时间稍长，远远比并发标记阶段时间短
+- **并发清除：** 开启用户线程，同时 GC 线程开始对未标记的区域做清扫
+
+![](http://wardseptember.top/20200802151619.png)
+
+从它的名字就可以看出它是一款优秀的垃圾收集器，主要优点：**并发收集、低停顿**。但是它有下面三个明显的缺点：
+
+* 吞吐量低：低停顿时间是以牺牲吞吐量为代价的，导致 CPU 利用率不够高。它会因为占用一部分线程而导致应用程序变慢，降低总吞吐量。
+
+- **无法处理浮动垃圾；**浮动垃圾是指并发标记和并发清除阶段，由于用户线程继续运行而产生的垃圾，这部分垃圾只能到下一次 GC 时才能进行回收。由于用户线程还在继续运行，因此需要预留出一部分内存提供给用户线程使用，意味着 CMS 收集不能像其它收集器那样等待老年代快满的时候再回收。如果预留的内存无法满足程序分配新对象的需要，就会出现 一次“并发失败”(Concurrent Mode Failure)，这时虚拟机将临时启用 Serial Old 来替代 CMS收集老年代的垃圾。
+- **它使用的回收算法-“标记-清除”算法会导致收集结束时会有大量空间碎片产生。**往往出现老年代空间有剩余，但无法找到足够大连续空间来分配当前对象，不得不提前触发一次 Full GC。
+
+### G1 收集器
+
+**G1 (Garbage-First) 是一款面向服务器的垃圾收集器,主要针对配备多颗处理器及大容量内存的机器. 以极高概率满足 GC 停顿时间要求的同时,还具备高吞吐量性能特征.**
+
+堆被分为新生代和老年代，其它收集器进行收集的范围都是整个新生代或者老年代，而 G1 可以直接对新生代和老年代一起回收。
+
+G1 把堆划分成多个大小相等的独立区域（Region），新生代和老年代不再物理隔离。
+
+![](http://wardseptember.top/20200802162959.png)
+
+通过引入 Region 的概念，从而将原来的一整块内存空间划分成多个的小空间，使得每个小空间可以单独进行垃圾回收。这种划分方法带来了很大的灵活性，使得可预测的停顿时间模型成为可能。通过记录每个 Region 垃圾回收时间以及回收所获得的空间（这两个值是通过过去回收的经验获得），并维护一个优先列表，每次根据允许的收集时间，优先回收价值最大的 Region。
+
+每个 Region 都有一个 Remembered Set，用来记录该 Region 对象的引用对象所在的 Region。通过使用 Remembered Set，在做可达性分析的时候就可以避免全堆扫描。
+
+![](http://wardseptember.top/20200802163142.png)
 
 
 
+如果不计算维护 Remembered Set 的操作，G1 收集器的运作大致可划分为以下几个步骤：
 
+- 初始标记：仅仅是标记一下GC Roots能直接关联到的对象，并且修改TAMS指针的值，让下一阶段用户线程并发运行时，能正确地在可用的Region中分配新对象。这个阶段需要停顿，但耗时很短，并且是借用进行Minor GC的时候同步完成的，所以G1在这阶段实际上没有额外的停顿。每一个Region设计了两个名为TAMS(Top at Mark Start)的指针，把Region中的一部分空间划分出来用于并发回收过程中的新对象分配，并发回收时新分配的对象地址都必须在这两个指针位置上。
+- 并发标记：从GC Root开始对堆中对象进行可达性分析，递归扫描整个堆里的对象图，找出要回收的对象，这阶段耗时较长，但可与用户程序并发执行。当对象图扫描完成以后，还要重新处理原始快照(SATB)记录下的在并发时有引用变动的对象。这是整个G1过程中，唯一不需要用户线程停顿的算法。
+- 最终标记：为了修正在并发标记期间因用户程序继续运作而导致标记产生变动的那一部分标记记录，虚拟机将这段时间对象变化记录在线程的 Remembered Set Logs 里面，最终标记阶段需要把 Remembered Set Logs 的数据合并到 Remembered Set 中。这阶段需要停顿线程，但是可并行执行。
+- 筛选回收：首先对各个 Region 中的回收价值和成本进行排序，根据用户所期望的 GC 停顿时间来制定回收计划。此阶段其实也可以做到与用户程序一起并发执行，但是因为只回收一部分 Region，时间是用户可控制的，而且停顿用户线程将大幅度提高收集效率。
+
+G1被视为 JDK1.7 中 HotSpot 虚拟机的一个重要进化特征。它具备一下特点：
+
+- **空间整合**：与 CMS 的“标记--清理”算法不同，G1 从整体来看是基于“标记整理”算法实现的收集器；从局部上来看是基于“复制”算法实现的；运行期间不会产生内存空间碎片。
+- **可预测的停顿**：这是 G1 相对于 CMS 的另一个大优势，降低停顿时间是 G1 和 CMS 共同的关注点，但 G1 除了追求低停顿外，还能建立可预测的停顿时间模型，能让使用者明确指定在一个长度为 M 毫秒的时间片段内。
+- 区域化内存划片，整体编为一系列不连续的内存区域，避免了全内存区的GC操作。核心思想是将整个堆内存区域分成大小相同的子区域，在JVM启动时自动设置这些子区域的大小。
+- 在堆的使用上，G1并不要求对象的存储一定是物理上连续的，只要逻辑上连续即可，每个分区也不会固定地为某个代服务，可以按需在新生代和老年代切换。启动时可以通过参数`-XX:G1HeapRegionSize=n`指定分区大小（1MB~32MB，且必须是2的幂），默认将整堆划分为2048个分区。大小范围在1MB~32MB，最多能设置2048个区域，也即最大能够支持的最大内存为：32MB * 2048 = 65536MB = 64内存。
+- 在G1中，还有一种特效的区域，叫Humongous区域。如果一个对象占用的空间超过了分区容量50%以上，G1收集器就认为这是一个巨型对象。这些巨型对象默认直接会被分配在老年代，但是如果它是一个短期存在的巨型对象，就会对垃圾收集器造成负面影响。为了解决这个问题，G1划分了一个H区，它用来专门存放巨型对象。如果一个H区装不下一个巨型对象，那么G1会寻找连续的H分区来存储。为了能找到连续的H区，有时候不得不启动Full GC。
+
+缺点：
+
+* G1为了垃圾收集产生的内存占用和程序运行时的额外执行负载比CMS要高。
+
+### 查看当前使用的垃圾收集器
+
+```shell
+java -XX:+PrintCommandLineFlags -version
+```
+
+### 一些参数
+
+```
+DefNew -----> Default New Generation
+Tenured -----> Old
+ParNew -----> Parallel New Generation
+PsYoungGen -----> Parallel Scavenge
+ParOldGen -----> Parallel Old Generation
+```
+
+### 配置垃圾收集器
+
+使用串行垃圾收集器，老年代会自动使用Serial Old收集器：
+
+```
+java +XX:+UseSerialGC
+```
+
+启用ParNew收集器，老年代会使用Serial Old收集器:
+
+```
+java -XX:+UseParNewGC
+```
+
+启用Parallel Scavenge收集器，老年代自动使用Parallel Old收集器：
+
+```
+java -XX:+UseParallelGC # 或者下面这句
+java -XX:+UseParallelOldGC
+
+java -XX:ParallelGCThreads=8 # 表示启动8个GC线程
+```
+
+启用Concurrent Mark Sweep(CMS)收集器，新生代自动使用ParNew:
+
+```
+java -XX:+UseConcMarkSweepGC
+```
+
+开启该参数后，新生代使用ParNew，老年代使用CMS，如果CMS出错，将使用Serial Old代理CMS收集垃圾。
+
+启用G1收集器：
+
+```
+java -XX:+UseG1GC
+```
+
+
+
+### 如何选择垃圾收集器
+
+* 单CPU或者小内存，单机程序
+
+    ```
+    -XX:+UseSerialGC
+    ```
+
+* 多CPU，需要大量吞吐量，如后台计算型
+
+    ```
+    -XX:+UseParallelGC # 或者
+    -XX:+UseParallelOldGC
+    ```
+
+* 多CPU，追求低停顿时间，需要快速响应，如互联网应用
+
+    ```
+    -XX:UseConcMarkSweepGC # 或者
+    -XX:+ParNewGC
+    ```
+
+![](https://gitee.com/wardseptember/images/raw/master/imgs/20200923162959.png)
+
+## 低延迟垃圾收集器
+
+衡量垃圾收集器的三项重要指标：
+
+* 内存占用
+* 吞吐量
+* 延迟
+
+随着计算机硬件的发展、性能的提升，延迟的重要性日益凸显。
+
+Shenandoah和ZGC垃圾收集器，几乎整个工作过程全部都是并发的，只有初始标记、最终标记这些阶段有短暂的停顿，这部分停顿时间基本上是固定的，与堆的容量、堆中对象的数量没有正比例关系，停顿时间不超过10毫秒。
+
+### Shenandoah收集器
+
+以后更新
+
+### ZGC收集器
+
+以后更新
+
+## 选择合适的垃圾收集器
+
+### Epsilon收集器
+
+Epsilon收集器是一个不能进行垃圾收集的垃圾收集器。一个垃圾收集器除了垃圾收集这个本职工作之外，它还要负责堆的管理与布局、对象的分配、与解释器的协作、与编译器的协作、与监控子系统协作等职责。Epsilon收集器主要负责这部分工作。
+
+# JVM调优
+
+## JVM参数类型
+
+### 标配参数
+
+```
+java -version
+
+java -help
+
+java -showversion
+```
+
+### X参数
+
+解释执行
+
+```
+java -Xint
+```
+
+第一次使用就编译成本地代码
+
+```
+java -Xcomp
+```
+
+混合模式
+
+```
+java -Xmixed
+```
+
+### XX参数
+
+#### Boolean类型
+
+```
+-XX:+ 或者 -某个属性值
++ 表示开启
+- 表示关闭
+```
+
+查看正在运行的java程序：
+
+```
+jps -l
+```
+
+查看某个java程序的某个jvm参数是否开启：
+
+```
+jinfo -flag jvm参数 进程号
+```
+
+例如：
+
+```
+jinfo -flag PrintGCDetails 进程号  # 查看这个java程序是否开始GC日志
+```
+
+查看某个java程序的所有jvm参数：
+
+```
+jinfo -flags 进程号
+```
+
+是否使用串行垃圾回收器：
+
+```
+-XX:-UseSerialGC
++XX:+UseSerialGC
+```
+
+#### KV设值类型
+
+```
+-XX:属性key=属性值value
+```
+
+使用例子：
+
+```
+-XX:MetaspaceSize=128m  # 设置元空间的大小
+-XX:MaxTenuringThreshold=15  # 年轻代升老年代的阈值
+```
+
+> -Xms等价于-XX:InitialHeapSize；-Xmx等价于-XX:MaxHeapSize
+
+#### jinfo举例，如何查看当前运行程序的配置
+
+查看jvm初始化参数：
+
+```
+java -XX:+PrintFlagsInitial 
+```
+
+查看jvm修改更新后的参数：
+
+```
+java -XX:PrintFlagsFinal
+```
+
+![](https://gitee.com/wardseptember/images/raw/master/imgs/20200922221945.png)
+
+> ":= "代表UseParallelGC被修改过，没有被修改就是“=”
+
+查看参数：
+
+```
+java -XX:+PrintCommandLineFlags -version
+```
+
+## JVM常用配置参数
+
+### -Xms 和 -Xmx
+
+-Xms和-Xmx设置为一样大小，默认为物理内存的四分之一
+
+### -Xss
+
+设置单个线程栈的大小，一般默认为512k~1024k
+
+-Xss等价于-XX:ThreadStackSize
+
+### -Xmn
+
+设置新生代的大小
+
+### -XX:MetaspaceSize
+
+设置元空间大小
+
+### -XX:+PrintGCDetails
+
+输出GC的详细信息
+
+#### Minor GC
+
+![](https://gitee.com/wardseptember/images/raw/master/imgs/20200922230529.png)
+
+#### Full GC
+
+![](https://gitee.com/wardseptember/images/raw/master/imgs/20200922230942.png)
+
+### 设置参数案例
+
+```shell
+-Xms128m -Xms4096m -Xss1024k -XX:MetaspaceSize=512m -XX:+PrintCommandLineFlags -XX:+PrintGCDetails -XX:+UseSerialGC
+```
+
+### -XX:SurvivorRatio
+
+新生代默认比例：
+
+Eden :from survivor : to survivo = 8 : 1 : 1
+
+jvm默认新生代参数：
+
+```
+-XX:SurvivorRatio=8
+# 这就是上面的8:1:1
+```
+
+### -XX:NewRatio
+
+配置新生代和老年代在堆结构中的占比。
+
+默认-XX:NewRatio=2，即新生代 : 老年代=1 : 2
+
+### -XX:MaxTenuringThreshold
+
+设置新生代升老年代的阈值，默认是15，最大也是15，因为只用4bit存储这个值。
+
+## 如何查看JVM系统默认值
+
+
+
+# 类文件结构
+
+## 概述
+
+在 Java 中，JVM 可以理解的代码就叫做`字节码`（即扩展名为 `.class` 的文件），它不面向任何特定的处理器，只面向虚拟机。Java 语言通过字节码的方式，在一定程度上解决了传统解释型语言执行效率低的问题，同时又保留了解释型语言可移植的特点。所以 Java 程序运行时比较高效，而且，由于字节码并不针对一种特定的机器，因此，Java 程序无须重新编译便可在多种不同操作系统的计算机上运行。
+
+Clojure（Lisp 语言的一种方言）、Groovy、Scala 等语言都是运行在 Java 虚拟机之上。下图展示了不同的语言被不同的编译器编译成`.class`文件最终运行在 Java 虚拟机之上。`.class`文件的二进制格式可以使用 [WinHex](https://www.x-ways.net/winhex/) 查看。
+
+![](http://wardseptember.top/20200818163307.png)
+
+**可以说`.class`文件是不同的语言在 Java 虚拟机之间的重要桥梁，同时也是支持 Java 跨平台很重要的一个原因。**
+
+## Class 文件结构总结
+
+根据 Java 虚拟机规范，类文件由单个 ClassFile 结构组成：
+
+```
+ClassFile {
+    u4             magic; //Class 文件的标志
+    u2             minor_version;//Class 的小版本号
+    u2             major_version;//Class 的大版本号
+    u2             constant_pool_count;//常量池的数量
+    cp_info        constant_pool[constant_pool_count-1];//常量池
+    u2             access_flags;//Class 的访问标记
+    u2             this_class;//当前类
+    u2             super_class;//父类
+    u2             interfaces_count;//接口
+    u2             interfaces[interfaces_count];//一个类可以实现多个接口
+    u2             fields_count;//Class 文件的字段属性
+    field_info     fields[fields_count];//一个类会可以有个字段
+    u2             methods_count;//Class 文件的方法数量
+    method_info    methods[methods_count];//一个类可以有个多个方法
+    u2             attributes_count;//此类的属性表中的属性数
+    attribute_info attributes[attributes_count];//属性表集合
+}
+```
+
+下面详细介绍一下 Class 文件结构涉及到的一些组件。
+
+**Class文件字节码结构组织示意图** （之前在网上保存的，非常不错，原出处不明）：
+
+![](http://wardseptember.top/20200818163508.png)
+
+### 2.1 魔数
+
+```
+    u4             magic; //Class 文件的标志
+```
+
+每个 Class 文件的头四个字节称为魔数（Magic Number）,它的唯一作用是**确定这个文件是否为一个能被虚拟机接收的 Class 文件**。
+
+程序设计者很多时候都喜欢用一些特殊的数字表示固定的文件类型或者其它特殊的含义。
+
+### 2.2 Class 文件版本
+
+```
+    u2             minor_version;//Class 的小版本号
+    u2             major_version;//Class 的大版本号
+```
+
+紧接着魔数的四个字节存储的是 Class 文件的版本号：第五和第六是**次版本号**，第七和第八是**主版本号**。
+
+高版本的 Java 虚拟机可以执行低版本编译器生成的 Class 文件，但是低版本的 Java 虚拟机不能执行高版本编译器生成的 Class 文件。所以，我们在实际开发的时候要确保开发的的 JDK 版本和生产环境的 JDK 版本保持一致。
+
+### 2.3 常量池
+
+```
+    u2             constant_pool_count;//常量池的数量
+    cp_info        constant_pool[constant_pool_count-1];//常量池
+```
+
+紧接着主次版本号之后的是常量池，常量池的数量是 constant_pool_count-1（**常量池计数器是从1开始计数的，将第0项常量空出来是有特殊考虑的，索引值为0代表“不引用任何一个常量池项”**）。
+
+常量池主要存放两大常量：字面量和符号引用。字面量比较接近于 Java 语言层面的的常量概念，如文本字符串、声明为 final 的常量值等。而符号引用则属于编译原理方面的概念。包括下面三类常量：
+
+- 类和接口的全限定名
+- 字段的名称和描述符
+- 方法的名称和描述符
+
+常量池中每一项常量都是一个表，这14种表有一个共同的特点：**开始的第一位是一个 u1 类型的标志位 -tag 来标识常量的类型，代表当前这个常量属于哪种常量类型．**
+
+| 类型                             | 标志（tag） | 描述                   |
+| -------------------------------- | ----------- | ---------------------- |
+| CONSTANT_utf8_info               | 1           | UTF-8编码的字符串      |
+| CONSTANT_Integer_info            | 3           | 整形字面量             |
+| CONSTANT_Float_info              | 4           | 浮点型字面量           |
+| CONSTANT_Long_info               | ５          | 长整型字面量           |
+| CONSTANT_Double_info             | ６          | 双精度浮点型字面量     |
+| CONSTANT_Class_info              | ７          | 类或接口的符号引用     |
+| CONSTANT_String_info             | ８          | 字符串类型字面量       |
+| CONSTANT_Fieldref_info           | ９          | 字段的符号引用         |
+| CONSTANT_Methodref_info          | 10          | 类中方法的符号引用     |
+| CONSTANT_InterfaceMethodref_info | 11          | 接口中方法的符号引用   |
+| CONSTANT_NameAndType_info        | 12          | 字段或方法的符号引用   |
+| CONSTANT_MothodType_info         | 16          | 标志方法类型           |
+| CONSTANT_MethodHandle_info       | 15          | 表示方法句柄           |
+| CONSTANT_InvokeDynamic_info      | 18          | 表示一个动态方法调用点 |
+
+`.class` 文件可以通过`javap -v class类名` 指令来看一下其常量池中的信息(`javap -v class类名-> temp.txt` ：将结果输出到 temp.txt 文件)。
+
+### 2.4 访问标志
+
+在常量池结束之后，紧接着的两个字节代表访问标志，这个标志用于识别一些类或者接口层次的访问信息，包括：这个 Class 是类还是接口，是否为 public 或者 abstract 类型，如果是类的话是否声明为 final 等等。
+
+类访问和属性修饰符:
+
+![](http://wardseptember.top/20200818164402.png)
+
+我们定义了一个 Employee 类
+
+```
+package top.snailclimb.bean;
+public class Employee {
+   ...
+}
+```
+
+通过`javap -v class类名` 指令来看一下类的访问标志。
+
+![](http://wardseptember.top/20200818164421.png)
+
+### 2.5 当前类索引,父类索引与接口索引集合
+
+```
+    u2             this_class;//当前类
+    u2             super_class;//父类
+    u2             interfaces_count;//接口
+    u2             interfaces[interfaces_count];//一个类可以实现多个接口
+```
+
+**类索引用于确定这个类的全限定名，父类索引用于确定这个类的父类的全限定名，由于 Java 语言的单继承，所以父类索引只有一个，除了 `java.lang.Object` 之外，所有的 java 类都有父类，因此除了 `java.lang.Object` 外，所有 Java 类的父类索引都不为 0。**
+
+**接口索引集合用来描述这个类实现了那些接口，这些被实现的接口将按`implents`(如果这个类本身是接口的话则是`extends`) 后的接口顺序从左到右排列在接口索引集合中。**
+
+### 2.6 字段表集合
+
+```
+    u2             fields_count;//Class 文件的字段的个数
+    field_info     fields[fields_count];//一个类会可以有个字段
+```
+
+字段表（field info）用于描述接口或类中声明的变量。字段包括类级变量以及实例变量，但不包括在方法内部声明的局部变量。
+
+**field info(字段表) 的结构:**
+
+![](http://wardseptember.top/20200818165909.png)
+
+- **access_flags:** 字段的作用域（`public` ,`private`,`protected`修饰符），是实例变量还是类变量（`static`修饰符）,可否被序列化（transient 修饰符）,可变性（final）,可见性（volatile 修饰符，是否强制从主内存读写）。
+- **name_index:** 对常量池的引用，表示的字段的名称；
+- **descriptor_index:** 对常量池的引用，表示字段和方法的描述符；
+- **attributes_count:** 一个字段还会拥有一些额外的属性，attributes_count 存放属性的个数；
+- **attributes[attributes_count]:** 存放具体属性具体内容。
+
+上述这些信息中，各个修饰符都是布尔值，要么有某个修饰符，要么没有，很适合使用标志位来表示。而字段叫什么名字、字段被定义为什么数据类型这些都是无法固定的，只能引用常量池中常量来描述。
+
+**字段的 access_flags 的取值:**
+
+![](http://wardseptember.top/20200818165931.png)
+
+### 2.7 方法表集合
+
+```
+    u2             methods_count;//Class 文件的方法的数量
+    method_info    methods[methods_count];//一个类可以有个多个方法
+```
+
+methods_count 表示方法的数量，而 method_info 表示的方法表。
+
+Class 文件存储格式中对方法的描述与对字段的描述几乎采用了完全一致的方式。方法表的结构如同字段表一样，依次包括了访问标志、名称索引、描述符索引、属性表集合几项。
+
+**method_info(方法表的) 结构:**
+
+![](http://wardseptember.top/20200818170006.png)
+
+**方法表的 access_flag 取值：**
+
+![](http://wardseptember.top/20200818170028.png)
+
+注意：因为`volatile`修饰符和`transient`修饰符不可以修饰方法，所以方法表的访问标志中没有这两个对应的标志，但是增加了`synchronized`、`native`、`abstract`等关键字修饰方法，所以也就多了这些关键字对应的标志。
+
+### 2.8 属性表集合
+
+```
+   u2             attributes_count;//此类的属性表中的属性数
+   attribute_info attributes[attributes_count];//属性表集合
+```
+
+在 Class 文件，字段表，方法表中都可以携带自己的属性表集合，以用于描述某些场景专有的信息。与 Class 文件中其它的数据项目要求的顺序、长度和内容不同，属性表集合的限制稍微宽松一些，不再要求各个属性表具有严格的顺序，并且只要不与已有的属性名重复，任何人实现的编译器都可以向属性表中写 入自己定义的属性信息，Java 虚拟机运行时会忽略掉它不认识的属性。
+
+### 参考链接
+
+* [JavaGuide](https://github.com/Snailclimb/JavaGuide/blob/master/docs/java/jvm/类文件结构.md#21-魔数)
+
+# 虚拟机类加载机制
+
+## 类的生命周期
+
+一个类的完整生命周期如下：
+
+![](http://wardseptember.top/20200818171655.png)
+
+## 类加载过程
+
+Class 文件需要加载到虚拟机中之后才能运行和使用，那么虚拟机是如何加载这些 Class 文件呢？
+
+系统加载 Class 类型的文件主要三步:**加载->连接->初始化**。连接过程又可分为三步:**验证->准备->解析**。
+
+![](http://wardseptember.top/20200818171716.png)
+
+### 加载
+
+类加载过程的第一步，主要完成下面3件事情：
+
+1. 通过全类名获取定义此类的二进制字节流
+2. 将字节流所代表的静态存储结构转换为方法区的运行时数据结构
+3. 在内存中生成一个代表该类的 Class 对象,作为方法区这些数据的访问入口
+
+虚拟机规范多上面这3点并不具体，因此是非常灵活的。比如："通过全类名获取定义此类的二进制字节流" 并没有指明具体从哪里获取、怎样获取。比如：比较常见的就是从 ZIP 包中读取（日后出现的JAR、EAR、WAR格式的基础）、其他文件生成（典型应用就是JSP）等等。
+
+**一个非数组类的加载阶段（加载阶段获取类的二进制字节流的动作）是可控性最强的阶段，这一步我们可以去完成还可以自定义类加载器去控制字节流的获取方式（重写一个类加载器的 `loadClass()` 方法）。数组类型不通过类加载器创建，它由 Java 虚拟机直接创建。**
+
+类加载器、双亲委派模型也是非常重要的知识点，这部分内容会在后面的文章中单独介绍到。
+
+加载阶段和连接阶段的部分内容是交叉进行的，加载阶段尚未结束，连接阶段可能就已经开始了。
+
+### 验证
+
+![](http://wardseptember.top/20200818171749.png)
+
+### 准备
+
+**准备阶段是正式为类变量分配内存并设置类变量初始值的阶段**，这些内存都将在方法区中分配。对于该阶段有以下几点需要注意：
+
+1. 这时候进行内存分配的仅包括类变量（static），而不包括实例变量，实例变量会在对象实例化时随着对象一块分配在 Java 堆中。
+2. 这里所设置的初始值"通常情况"下是数据类型默认的零值（如0、0L、null、false等），比如我们定义了`public static int value=111` ，那么 value 变量在准备阶段的初始值就是 0 而不是111（初始化阶段才会赋值）。特殊情况：比如给 value 变量加上了 fianl 关键字`public static final int value=111` ，那么准备阶段 value 的值就被赋值为 111。
+
+**基本数据类型的零值：**
+
+![](http://wardseptember.top/20200818171813.png)
+
+### 解析
+
+解析阶段是虚拟机将常量池内的符号引用替换为直接引用的过程。解析动作主要针对类或接口、字段、类方法、接口方法、方法类型、方法句柄和调用限定符7类符号引用进行。
+
+符号引用就是一组符号来描述目标，可以是任何字面量。**直接引用**就是直接指向目标的指针、相对偏移量或一个间接定位到目标的句柄。在程序实际运行时，只有符号引用是不够的，举个例子：在程序执行方法时，系统需要明确知道这个方法所在的位置。Java 虚拟机为每个类都准备了一张方法表来存放类中所有的方法。当需要调用一个类的方法的时候，只要知道这个方法在方发表中的偏移量就可以直接调用该方法了。通过解析操作符号引用就可以直接转变为目标方法在类中方法表的位置，从而使得方法可以被调用。
+
+综上，解析阶段是虚拟机将常量池内的符号引用替换为直接引用的过程，也就是得到类或者字段、方法在内存中的指针或者偏移量。
+
+### 初始化
+
+初始化是类加载的最后一步，也是真正执行类中定义的 Java 程序代码(字节码)，初始化阶段是执行类构造器 `<clinit> ()`方法的过程。
+
+对于`<clinit>（）` 方法的调用，虚拟机会自己确保其在多线程环境中的安全性。因为 `<clinit>（）` 方法是带锁线程安全，所以在多线程环境下进行类初始化的话可能会引起死锁，并且这种死锁很难被发现。
+
+#### 主动引用
+
+对于初始化阶段，虚拟机严格规范了有且只有5种情况下，必须对类进行初始化(只有主动去使用类才会初始化类)：
+
+1. 当遇到 new 、 getstatic、putstatic或invokestatic 这4条直接码指令时，比如 new 一个类，读取一个静态字段(未被 final 修饰)、或调用一个类的静态方法时。
+    - 当jvm执行new指令时会初始化类。即当程序创建一个类的实例对象。
+    - 当jvm执行getstatic指令时会初始化类。即程序访问类的静态变量(不是静态常量，常量会被加载到运行时常量池)。
+    - 当jvm执行putstatic指令时会初始化类。即程序给类的静态变量赋值。
+    - 当jvm执行invokestatic指令时会初始化类。即程序调用类的静态方法。
+2. 使用 `java.lang.reflect` 包的方法对类进行反射调用时如Class.forname("..."),newInstance()等等。 ，如果类没初始化，需要触发其初始化。
+3. 初始化一个类，如果其父类还未初始化，则先触发该父类的初始化。
+4. 当虚拟机启动时，用户需要定义一个要执行的主类 (包含 main 方法的那个类)，虚拟机会先初始化这个类。
+5. MethodHandle和VarHandle可以看作是轻量级的反射调用机制，而要想使用这2个调用， 就必须先使用findStaticVarHandle来初始化要调用的类。
+6. 当一个接口中定义了JDK8新加入的默认方法（被default关键字修饰的接口方法）时，如果有这个接口的实现类发生了初始化，那该接口要在其之前被初始化。
+
+#### 被动引用
+
+以上6 种场景中的行为称为对一个类进行主动引用。除此之外，所有引用类的方式都不会触发初始化，称为被动引用。被动引用的常见例子包括：
+
+- 通过子类引用父类的静态字段，不会导致子类初始化。
+
+```java
+System.out.println(SubClass.value);  // value 字段在 SuperClass 中定义Copy to clipboardErrorCopied
+```
+
+- 通过数组定义来引用类，不会触发此类的初始化。该过程会对数组类进行初始化，数组类是一个由虚拟机自动生成的、直接继承自 Object 的子类，其中包含了数组的属性和方法。
+
+```java
+SuperClass[] sca = new SuperClass[10];Copy to clipboardErrorCopied
+```
+
+- 常量在编译阶段会存入调用类的常量池中，本质上并没有直接引用到定义常量的类，因此不会触发定义常量的类的初始化。
+
+```java
+System.out.println(ConstClass.HELLOWORLD);
+```
+
+### 卸载
+
+卸载类即该类的Class对象被GC。
+
+卸载类需要满足3个要求:
+
+1. 该类的所有的实例对象都已被GC，也就是说堆不存在该类的实例对象。
+2. 该类没有在其他任何地方被引用
+3. 该类的类加载器的实例已被GC
+
+所以，在JVM生命周期类，由jvm自带的类加载器加载的类是不会被卸载的。但是由我们自定义的类加载器加载的类是可能被卸载的。
+
+只要想通一点就好了，jdk自带的BootstrapClassLoader,PlatformClassLoader,AppClassLoader负责加载jdk提供的类，所以它们(类加载器的实例)肯定不会被回收。而我们自定义的类加载器的实例是可以被回收的，所以使用我们自定义加载器加载的类是可以被卸载掉的。
+
+### **参考链接**
+
+* [JavaGuide](https://github.com/Snailclimb/JavaGuide/blob/master/docs/java/jvm/类加载过程.md)
+
+## 类加载器
+
+所有的类都由类加载器加载，加载的作用就是将 .class文件加载到内存。
+
+JVM 中内置了三个重要的 ClassLoader，除了 BootstrapClassLoader 其他类加载器均由 Java 实现且全部继承自`java.lang.ClassLoader`：
+
+1. **BootstrapClassLoader(启动类加载器)** ：最顶层的加载类，由C++实现，负责加载 `%JAVA_HOME%/lib`目录下的jar包和类或者或被 `-Xbootclasspath`参数指定的路径中的所有类。
+2. **ExtensionClassLoader(扩展类加载器)** ：主要负责加载目录 `%JRE_HOME%/lib/ext` 目录下的jar包和类，或被 `java.ext.dirs` 系统变量所指定的路径下的jar包。
+3. **AppClassLoader(应用程序类加载器)** :面向我们用户的加载器，负责加载当前应用classpath下的所有jar包和类。
+
+### 双亲委派模型
+
+每一个类都有一个对应它的类加载器。系统中的 ClassLoder 在协同工作的时候会默认使用 **双亲委派模型** 。即在类加载的时候，系统会首先判断当前类是否被加载过。已经被加载的类会直接返回，否则才会尝试加载。加载的时候，首先会把该请求委派该父类加载器的 `loadClass()` 处理，因此所有的请求最终都应该传送到顶层的启动类加载器 `BootstrapClassLoader` 中。当父类加载器无法处理时，才由自己来处理。当父类加载器为null时，会使用启动类加载器 `BootstrapClassLoader` 作为父类加载器。
+
+![](http://wardseptember.top/20200818174711.png)
+
+每个类加载都有一个父类加载器，我们通过下面的程序来验证。
+
+```
+public class ClassLoaderDemo {
+    public static void main(String[] args) {
+        System.out.println("ClassLodarDemo's ClassLoader is " + ClassLoaderDemo.class.getClassLoader());
+        System.out.println("The Parent of ClassLodarDemo's ClassLoader is " + ClassLoaderDemo.class.getClassLoader().getParent());
+        System.out.println("The GrandParent of ClassLodarDemo's ClassLoader is " + ClassLoaderDemo.class.getClassLoader().getParent().getParent());
+    }
+}
+```
+
+Output
+
+```
+ClassLodarDemo's ClassLoader is sun.misc.Launcher$AppClassLoader@18b4aac2
+The Parent of ClassLodarDemo's ClassLoader is sun.misc.Launcher$ExtClassLoader@1b6d3586
+The GrandParent of ClassLodarDemo's ClassLoader is null
+```
+
+`AppClassLoader`的父类加载器为`ExtClassLoader` `ExtClassLoader`的父类加载器为null，**null并不代表`ExtClassLoader`没有父类加载器，而是 `BootstrapClassLoader`** 。
+
+其实这个双亲翻译的容易让别人误解，我们一般理解的双亲都是父母，这里的双亲更多地表达的是“父母这一辈”的人而已，并不是说真的有一个 Mother ClassLoader 和一个 Father ClassLoader 。另外，类加载器之间的“父子”关系也不是通过继承来体现的，是由“优先级”来决定。官方API文档对这部分的描述如下:
+
+> The Java platform uses a delegation model for loading classes. **The basic idea is that every class loader has a "parent" class loader.** When loading a class, a class loader first "delegates" the search for the class to its parent class loader before attempting to find the class itself.
+
+### 双亲委派模型实现源码分析
+
+双亲委派模型的实现代码非常简单，逻辑非常清晰，都集中在 `java.lang.ClassLoader` 的 `loadClass()` 中，相关代码如下所示。
+
+```
+private final ClassLoader parent; 
+protected Class<?> loadClass(String name, boolean resolve)
+        throws ClassNotFoundException
+    {
+        synchronized (getClassLoadingLock(name)) {
+            // 首先，检查请求的类是否已经被加载过
+            Class<?> c = findLoadedClass(name);
+            if (c == null) {
+                long t0 = System.nanoTime();
+                try {
+                    if (parent != null) {//父加载器不为空，调用父加载器loadClass()方法处理
+                        c = parent.loadClass(name, false);
+                    } else {//父加载器为空，使用启动类加载器 BootstrapClassLoader 加载
+                        c = findBootstrapClassOrNull(name);
+                    }
+                } catch (ClassNotFoundException e) {
+                   //抛出异常说明父类加载器无法完成加载请求
+                }
+                
+                if (c == null) {
+                    long t1 = System.nanoTime();
+                    //自己尝试加载
+                    c = findClass(name);
+
+                    // this is the defining class loader; record the stats
+                    sun.misc.PerfCounter.getParentDelegationTime().addTime(t1 - t0);
+                    sun.misc.PerfCounter.getFindClassTime().addElapsedTimeFrom(t1);
+                    sun.misc.PerfCounter.getFindClasses().increment();
+                }
+            }
+            if (resolve) {
+                resolveClass(c);
+            }
+            return c;
+        }
+    }
+```
+
+### 双亲委派模型的好处
+
+双亲委派模型保证了Java程序的稳定运行，可以避免类的重复加载（JVM 区分不同类的方式不仅仅根据类名，相同的类文件被不同的类加载器加载产生的是两个不同的类），也保证了 Java 的核心 API 不被篡改。如果没有使用双亲委派模型，而是每个类加载器加载自己的话就会出现一些问题，比如我们编写一个称为 `java.lang.Object` 类的话，那么程序运行的时候，系统就会出现多个不同的 `Object` 类。
+
+### 如果我们不想用双亲委派模型怎么办？
+
+**自定义加载器的话，需要继承 `ClassLoader` 。如果我们不想打破双亲委派模型，就重写 `ClassLoader` 类中的 `findClass()` 方法即可，无法被父类加载器加载的类最终会通过这个方法被加载。但是，如果想打破双亲委派模型则需要重写 `loadClass()` 方法**
+
+### 自定义类加载器
+
+除了 `BootstrapClassLoader` 其他类加载器均由 Java 实现且全部继承自`java.lang.ClassLoader`。如果我们要自定义自己的类加载器，很明显需要继承 `ClassLoader`。
+
+### 参考链接
+
+* [JavaGuide](https://github.com/Snailclimb/JavaGuide/blob/master/docs/java/jvm/类加载器.md)
